--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "sass": "^1.59.3",
     "styled-components": "^5.3.9",
     "typescript": "5.0.2"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.0.7"
   }
 }
